<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.cs.dartmouth.cs165.myruns.vishal.ui.activity.EntryDetailActivity"
    tools:showIn="@layout/activity_entry_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/label_input_type" />

            <EditText
                android:id="@+id/edtInputType"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/label_input_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/label_activity_type" />

            <EditText
                android:id="@+id/edtActivityType"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/label_activity_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/date_time" />

            <EditText
                android:id="@+id/edtDateTime"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/date_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/duration" />

            <EditText
                android:id="@+id/edtDuration"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/duration" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/distance" />

            <EditText
                android:id="@+id/edtDistance"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/distance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/duration" />

            <EditText
                android:id="@+id/edtCalories"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/calories" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/heart_Rate" />

            <EditText
                android:id="@+id/edtHeartRate"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:padding="5dp"
                android:text="@string/heart_Rate" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
